# frontend

./: .gitignore  .prettierignore  README.md  asset-manifest.json  index.html  package.json
.github/workflows/: cd.yaml  ci.yaml
backend/: README.md  pyproject.toml
backend/backend/: app.py
backend/backend/types/: models.py
frontend/: package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css  index.js
src/: App.js  index.js
static/css/: main.1ea98c00.css  main.1ea98c00.css.map  main.229db853.css  main.229db853.css.map  main.28e13721.css  main.28e13721.css.map  main.2c544302.css  main.2c544302.css.map  main.32ce305c.css  main.32ce305c.css.map  main.3512c580.css  main.3512c580.css.map  main.49703fcd.css  main.49703fcd.css.map  main.6316cc06.css  main.6316cc06.css.map  main.6b571833.css  main.6b571833.css.map  main.6caaa582.css  main.6caaa582.css.map  main.70929348.css  main.70929348.css.map  main.76e3950a.css  main.76e3950a.css.map  main.79e284ec.css  main.79e284ec.css.map  main.85653c06.css  main.85653c06.css.map  main.8a01dfaf.css  main.8a01dfaf.css.map  main.973fe76c.css  main.973fe76c.css.map  main.a1281e52.css  main.a1281e52.css.map  main.a361e385.css  main.a361e385.css.map  main.a66ab081.css  main.a66ab081.css.map  main.b4161615.css  main.b4161615.css.map  (+20 more)
static/js/: main.0178dbaf.js  main.0178dbaf.js.map  main.01af24d5.js  main.01af24d5.js.map  main.0edd598b.js  main.0edd598b.js.map  main.22fc4ee2.js  main.22fc4ee2.js.map  main.26791293.js  main.26791293.js.map  main.29dcb059.js  main.29dcb059.js.map  (+51 more)
(+129 files in other folders)
