[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.scripts]
start = "backend.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
